Projects alignments fixed

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -9,14 +9,16 @@
   display: flex;
   flex-direction: row;
   color: var(--white);
-  padding: 3rem 1rem;
+  padding: 2.5rem 1.2rem;
   gap: 2rem;
   font-family: "Open Sans";
-  width: 77%;
+  width: 88%;
+  margin-bottom: 5rem;
+  align-items: center;
 }
 
 .project-image img {
-  width: 18rem;
+  width: 23rem;
 }
 
 .project-title {
@@ -34,6 +36,10 @@
 
 .project-desc hr {
   margin-top: 4rem;
+}
+
+.project-text {
+  font-size: 1.1rem;
 }
 
 .project-links {
